# cmake_ref

./: CMakeLists.txt  README.md
modules/: MyModule.cmake
src/: demo.c
sub/: CMakeLists.txt
